# polymarket-btc-bot

./: .env.example  .gitignore  GATEKEEPING_LOGS_GUIDE.md  PRE_LIVE_CHECKLIST.md  README.md  agent.js  implementation_plan.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  test_binance_connectivity.py
config/: settings.py
data/models/ensemble/: model_seed_0.txt  model_seed_1.txt  model_seed_2.txt  model_seed_3.txt  (+1 more)
deploy/: polymarket_bot.service  setup_server.sh
scripts/: 01_fetch_historical.py  02_engineer_features.py  03_train_model.py  04_validate_model.py  05_validation_preflight.py  06_backtest.py  06_run_live_paper_trade.py
src/exchange/: binance_rest.py  binance_ws.py  gamma_api.py  polymarket_client.py  polymarket_ws.py  solrouter_bridge.py
src/execution/: engine.py  inference.py  live_test_gate.py  market_rules.py  order_router.py  position_manager.py  probability_estimator.py  risk_manager.py
src/features/: indicators.py  minute_features.py  pipeline.py  schema.py  trend_filter.py
src/utils/: experiment_tracking.py  logging_config.py  model_metadata.py  run_governance.py  state.py
tests/: test_binance_rest.py  test_binance_ws.py  test_engine_safety.py  test_experiment_tracking.py  test_feature_schema.py  test_features.py  test_gamma_api.py  test_inference.py  test_live_test_gate.py  test_order_router.py  test_pipeline_parity.py  test_polymarket_client.py  test_polymarket_ws.py  test_position_manager.py  test_probability_estimator.py  test_risk_manager.py  test_run_governance.py  test_state.py  verify_parity_live.py
