[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-btc-bot"
version = "0.1.0"
description = "ML-driven Polymarket BTC 5-minute market trading bot with gasless execution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "lightgbm>=4.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "py-clob-client>=0.15.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=15.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"
